# tiny-transformer

./: .gitignore  README.md  pyproject.toml
tiny_transformer/: attention.py  config.py  dataloader.py  dataset.py  inference.py  positional_encoding.py  train.py  transformer.py
